@@ -14,6 +14,7 @@ import org.mockito.ArgumentCaptor;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.Optional;
 import java.util.UUID;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -23,303 +24,603 @@ public class NotificationServiceTest {
 
     private NotificationRepository notificationRepository;
     private UserService userService;
+    private AsyncNotificationService asyncNotificationService;
     private NotificationService notificationService;
 
     @BeforeEach
     public void setUp() {
         notificationRepository = mock(NotificationRepository.class);
         userService = mock(UserService.class);
-        notificationService = new NotificationService(notificationRepository, userService);
+        asyncNotificationService = mock(AsyncNotificationService.class);
+        notificationService = new NotificationService(notificationRepository, userService, asyncNotificationService);
     }
 
+    // ASYNC DELEGATION TESTS
     @Test
-    @DisplayName("Membuat notifikasi saat status laporan berubah")
-    public void testOnStatusChanged() {
+    @DisplayName("Mendelegasikan pembuatan notifikasi status ke AsyncNotificationService")
+    public void testOnStatusChanged_DelegatesToAsync() {
         // Arrange
-        Long userId = 1L;
-        Report report = new Report(userId, "user@example.com", ReportCategory.PAYMENT, "Payment issue");
+        Report report = new Report(1L, "user@example.com", ReportCategory.PAYMENT, "Payment issue");
         report.setId(UUID.randomUUID());
-        ReportStatus oldStatus = ReportStatus.PENDING;
-        ReportStatus newStatus = ReportStatus.ON_PROGRESS;
 
         // Act
-        notificationService.onStatusChanged(report, oldStatus, newStatus);
+        notificationService.onStatusChanged(report, ReportStatus.PENDING, ReportStatus.ON_PROGRESS);
 
         // Assert
-        ArgumentCaptor<Notification> notificationCaptor = ArgumentCaptor.forClass(Notification.class);
-        verify(notificationRepository).save(notificationCaptor.capture());
-
-        Notification notification = notificationCaptor.getValue();
-        assertEquals(userId, notification.getRecipientId());
-        assertEquals("user@example.com", notification.getRecipientEmail());
-        assertEquals("SYSTEM", notification.getSenderRole());
-        assertTrue(notification.getTitle().contains("Report Status Updated"));
-        assertTrue(notification.getMessage().contains(oldStatus.getDisplayName()));
-        assertTrue(notification.getMessage().contains(newStatus.getDisplayName()));
-        assertEquals("STATUS_UPDATE", notification.getType());
-        assertEquals(report.getId(), notification.getRelatedEntityId());
-        assertFalse(notification.isRead());
+        verify(asyncNotificationService).processStatusChangeNotificationsAsync(report, ReportStatus.PENDING, ReportStatus.ON_PROGRESS);
+        verify(notificationRepository, never()).save(any(Notification.class)); // Should not save directly
     }
 
     @Test
-    @DisplayName("Membuat notifikasi saat respons ditambahkan ke laporan")
-    public void testOnResponseAdded() {
+    @DisplayName("Mendelegasikan pembuatan notifikasi respons ke AsyncNotificationService")
+    public void testOnResponseAdded_DelegatesToAsync() {
         // Arrange
-        Long userId = 1L;
-        Report report = new Report(userId, "user@example.com", ReportCategory.TICKET, "Ticket issue");
+        Report report = new Report(1L, "user@example.com", 10L, "Event", ReportCategory.EVENT, "Issue");
         report.setId(UUID.randomUUID());
-        ReportResponse response = new ReportResponse(2L, "admin@example.com", "ADMIN", "Admin response", report);
+        ReportResponse response = new ReportResponse(1L, "user@example.com", "ATTENDEE", "Response", report);
 
         // Act
         notificationService.onResponseAdded(report, response);
 
         // Assert
-        ArgumentCaptor<Notification> notificationCaptor = ArgumentCaptor.forClass(Notification.class);
-        verify(notificationRepository).save(notificationCaptor.capture());
-
-        Notification notification = notificationCaptor.getValue();
-        assertEquals(userId, notification.getRecipientId());
-        assertEquals("user@example.com", notification.getRecipientEmail());
-        assertEquals("ADMIN", notification.getSenderRole());
-        assertTrue(notification.getTitle().contains("New Response"));
-        assertTrue(notification.getMessage().contains("Admin response"));
-        assertEquals("NEW_RESPONSE", notification.getType());
-        assertEquals(report.getId(), notification.getRelatedEntityId());
-        assertFalse(notification.isRead());
+        verify(asyncNotificationService).processResponseNotificationsAsync(report, response);
+        verify(notificationRepository, never()).save(any(Notification.class)); // Should not save directly
     }
 
     @Test
-    @DisplayName("Membuat notifikasi untuk admin saat laporan baru dibuat")
-    public void testNotifyNewReport() {
+    @DisplayName("Mendelegasikan pembuatan notifikasi laporan baru ke AsyncNotificationService")
+    public void testNotifyNewReport_DelegatesToAsync() {
         // Arrange
-        Report report = new Report(1L, "attendee@example.com", ReportCategory.EVENT, "Event issue");
+        Report report = new Report(1L, "user@example.com", ReportCategory.PAYMENT, "Issue");
         report.setId(UUID.randomUUID());
-
-        List<Long> adminIds = Arrays.asList(1L, 2L);
-        when(userService.getAdminIds()).thenReturn(adminIds);
-        when(userService.getUserEmail(1L)).thenReturn("admin1@example.com");
-        when(userService.getUserEmail(2L)).thenReturn("admin2@example.com");
 
         // Act
         notificationService.notifyNewReport(report);
+
+        // Assert
+        verify(asyncNotificationService).processNewReportNotificationsAsync(report);
+        verify(notificationRepository, never()).save(any(Notification.class)); // Should not save directly
+    }
+
+    // SYNCHRONOUS FALLBACK TESTS
+    @Test
+    @DisplayName("Membuat notifikasi sinkron ketika status laporan berubah")
+    public void testOnStatusChangedSync() {
+        // Arrange
+        Report report = new Report(1L, "user@example.com", ReportCategory.PAYMENT, "Payment issue");
+        report.setId(UUID.randomUUID());
+
+        // Act
+        notificationService.onStatusChangedSync(report, ReportStatus.PENDING, ReportStatus.ON_PROGRESS);
+
+        // Assert
+        ArgumentCaptor<Notification> captor = ArgumentCaptor.forClass(Notification.class);
+        verify(notificationRepository).save(captor.capture());
+
+        Notification notification = captor.getValue();
+        assertEquals("Report Status Updated", notification.getTitle());
+        assertEquals("STATUS_UPDATE", notification.getType());
+        assertFalse(notification.isRead());
+        assertTrue(notification.getMessage().contains("Pending"));
+        assertTrue(notification.getMessage().contains("On Progress"));
+    }
+
+    @Test
+    @DisplayName("Memberi notifikasi sinkron ke admin dan organizer ketika attendee merespon laporan event")
+    public void testOnResponseAddedSync_AttendeeToStaff() {
+        // Arrange
+        Report report = new Report(1L, "user@example.com", 10L, "Event", ReportCategory.EVENT, "Issue");
+        report.setId(UUID.randomUUID());
+        ReportResponse response = new ReportResponse(1L, "user@example.com", "ATTENDEE", "Response", report);
+
+        when(userService.getAdminIds()).thenReturn(List.of(2L));
+        when(userService.getUserEmail(2L)).thenReturn("admin@example.com");
+        when(userService.getOrganizerIds(10L)).thenReturn(List.of(3L));
+        when(userService.getUserEmail(3L)).thenReturn("organizer@example.com");
+
+        // Act
+        notificationService.onResponseAddedSync(report, response);
 
         // Assert
         verify(notificationRepository, times(2)).save(any(Notification.class));
     }
 
     @Test
-    @DisplayName("Membuat notifikasi untuk organizer saat laporan terkait event dibuat")
-    public void testNotifyOrganizerOfReport() {
+    @DisplayName("Memberi notifikasi sinkron ke attendee ketika staff merespon laporan")
+    public void testOnResponseAddedSync_StaffToAttendee() {
         // Arrange
-        Report report = new Report(1L, "attendee@example.com", ReportCategory.EVENT, "Event issue");
+        Report report = new Report(1L, "user@example.com", ReportCategory.PAYMENT, "Issue");
         report.setId(UUID.randomUUID());
-        UUID eventId = UUID.randomUUID();
-
-        List<Long> organizerIds = List.of(3L);
-        when(userService.getOrganizerIds(eventId)).thenReturn(organizerIds);
-        when(userService.getUserEmail(3L)).thenReturn("organizer@example.com");
+        ReportResponse response = new ReportResponse(2L, "admin@example.com", "ADMIN", "Admin response", report);
 
         // Act
-        notificationService.notifyOrganizerOfReport(report, eventId);
+        notificationService.onResponseAddedSync(report, response);
 
         // Assert
-        verify(notificationRepository).save(any(Notification.class));
+        ArgumentCaptor<Notification> captor = ArgumentCaptor.forClass(Notification.class);
+        verify(notificationRepository).save(captor.capture());
+
+        Notification notification = captor.getValue();
+        assertEquals("Response to Your Report", notification.getTitle());
+        assertEquals("STAFF_RESPONSE", notification.getType());
     }
 
     @Test
-    @DisplayName("Mendapatkan daftar notifikasi pengguna berdasarkan ID")
+    @DisplayName("Memberi notifikasi sinkron ke organizer ketika admin merespon laporan event")
+    public void testOnResponseAddedSync_AdminToEventOrganizers() {
+        // Arrange
+        Report report = new Report(1L, "user@example.com", 10L, "Event", ReportCategory.EVENT, "Issue");
+        report.setId(UUID.randomUUID());
+        ReportResponse response = new ReportResponse(2L, "admin@example.com", "ADMIN", "Admin response", report);
+
+        when(userService.getOrganizerIds(10L)).thenReturn(Arrays.asList(3L, 2L)); // Include admin in list
+        when(userService.getUserEmail(3L)).thenReturn("organizer@example.com");
+
+        // Act
+        notificationService.onResponseAddedSync(report, response);
+
+        // Assert
+        verify(notificationRepository, times(2)).save(any(Notification.class));
+    }
+
+    @Test
+    @DisplayName("Menangani exception sinkron ketika memberi notifikasi ke organizer tentang respon admin")
+    public void testOnResponseAddedSync_AdminToEventOrganizers_WithException() {
+        // Arrange
+        Report report = new Report(1L, "user@example.com", 10L, "Event", ReportCategory.EVENT, "Issue");
+        report.setId(UUID.randomUUID());
+        ReportResponse response = new ReportResponse(2L, "admin@example.com", "ADMIN", "Admin response", report);
+
+        when(userService.getOrganizerIds(10L)).thenReturn(List.of(3L));
+        when(userService.getUserEmail(3L)).thenThrow(new RuntimeException("Failed to get organizer email"));
+
+        // Act & Assert
+        assertDoesNotThrow(() -> notificationService.onResponseAddedSync(report, response));
+
+        // Assert
+        verify(notificationRepository, times(1)).save(any(Notification.class));
+    }
+
+    @Test
+    @DisplayName("Mengidentifikasi attendee sinkron berdasarkan userId ketika email berbeda")
+    public void testOnResponseAddedSync_AttendeeByUserId() {
+        // Arrange
+        Report report = new Report(1L, "user@example.com", ReportCategory.EVENT, "Issue");
+        report.setId(UUID.randomUUID());
+        ReportResponse response = new ReportResponse(1L, "different@example.com", "ATTENDEE", "Response", report);
+
+        when(userService.getAdminIds()).thenReturn(List.of(2L));
+        when(userService.getUserEmail(2L)).thenReturn("admin@example.com");
+
+        // Act
+        notificationService.onResponseAddedSync(report, response);
+
+        // Assert
+        verify(notificationRepository, times(1)).save(any(Notification.class));
+    }
+
+    @Test
+    @DisplayName("Memberi notifikasi sinkron ke organizer dengan fallback nama event ketika eventTitle null")
+    public void testOnResponseAddedSync_AttendeeToEventOrganizers_NullTitle() {
+        // Arrange
+        Report report = new Report(1L, "user@example.com", 10L, null, ReportCategory.EVENT, "Issue");
+        report.setId(UUID.randomUUID());
+        ReportResponse response = new ReportResponse(1L, "user@example.com", "ATTENDEE", "Response", report);
+
+        when(userService.getAdminIds()).thenReturn(List.of(2L));
+        when(userService.getUserEmail(2L)).thenReturn("admin@example.com");
+        when(userService.getOrganizerIds(10L)).thenReturn(List.of(3L));
+        when(userService.getUserEmail(3L)).thenReturn("organizer@example.com");
+
+        // Act
+        notificationService.onResponseAddedSync(report, response);
+
+        // Assert
+        ArgumentCaptor<Notification> captor = ArgumentCaptor.forClass(Notification.class);
+        verify(notificationRepository, times(2)).save(captor.capture());
+
+        List<Notification> notifications = captor.getAllValues();
+        assertTrue(notifications.stream().anyMatch(n -> n.getMessage().contains("Event #10")));
+    }
+
+    @Test
+    @DisplayName("Memberi notifikasi sinkron admin ke organizer dengan fallback nama event ketika eventTitle null")
+    public void testOnResponseAddedSync_AdminToEventOrganizers_NullTitle() {
+        // Arrange
+        Report report = new Report(1L, "user@example.com", 10L, null, ReportCategory.EVENT, "Issue");
+        report.setId(UUID.randomUUID());
+        ReportResponse response = new ReportResponse(2L, "admin@example.com", "ADMIN", "Admin response", report);
+
+        when(userService.getOrganizerIds(10L)).thenReturn(List.of(3L));
+        when(userService.getUserEmail(3L)).thenReturn("organizer@example.com");
+
+        // Act
+        notificationService.onResponseAddedSync(report, response);
+
+        // Assert
+        ArgumentCaptor<Notification> captor = ArgumentCaptor.forClass(Notification.class);
+        verify(notificationRepository, times(2)).save(captor.capture());
+
+        List<Notification> notifications = captor.getAllValues();
+        assertTrue(notifications.stream().anyMatch(n -> n.getMessage().contains("Event #10")));
+    }
+
+    @Test
+    @DisplayName("Tidak membuat notifikasi sinkron ketika respon dari role yang tidak dikenal")
+    public void testOnResponseAddedSync_UnknownRole() {
+        // Arrange
+        Report report = new Report(1L, "user@example.com", ReportCategory.PAYMENT, "Issue");
+        report.setId(UUID.randomUUID());
+        ReportResponse response = new ReportResponse(99L, "unknown@example.com", "UNKNOWN_ROLE", "Unknown response", report);
+
+        // Act
+        notificationService.onResponseAddedSync(report, response);
+
+        // Assert - Should not save any notifications (neither attendee nor staff)
+        verify(notificationRepository, never()).save(any(Notification.class));
+        verify(userService, never()).getAdminIds();
+        verify(userService, never()).getOrganizerIds(any());
+    }
+
+    @Test
+    @DisplayName("Memberi notifikasi sinkron ke attendee ketika organizer merespon laporan")
+    public void testOnResponseAddedSync_OrganizerResponse() {
+        // Arrange
+        Report report = new Report(1L, "user@example.com", 10L, "Event", ReportCategory.EVENT, "Issue");
+        report.setId(UUID.randomUUID());
+        ReportResponse response = new ReportResponse(3L, "organizer@example.com", "ORGANIZER", "Organizer response", report);
+
+        // Act
+        notificationService.onResponseAddedSync(report, response);
+
+        // Assert
+        ArgumentCaptor<Notification> captor = ArgumentCaptor.forClass(Notification.class);
+        verify(notificationRepository).save(captor.capture());
+
+        Notification notification = captor.getValue();
+        assertEquals("ORGANIZER", notification.getSenderRole());
+        assertEquals("STAFF_RESPONSE", notification.getType());
+    }
+
+    @Test
+    @DisplayName("Menangani exception sinkron ketika memberi notifikasi ke organizer tentang respon attendee")
+    public void testOnResponseAddedSync_ExceptionHandling() {
+        // Arrange
+        Report report = new Report(1L, "user@example.com", 10L, "Event", ReportCategory.EVENT, "Issue");
+        report.setId(UUID.randomUUID());
+        ReportResponse response = new ReportResponse(1L, "user@example.com", "ATTENDEE", "Response", report);
+
+        when(userService.getAdminIds()).thenReturn(List.of(2L));
+        when(userService.getUserEmail(2L)).thenReturn("admin@example.com");
+        when(userService.getOrganizerIds(10L)).thenReturn(List.of(3L));
+        when(userService.getUserEmail(3L)).thenThrow(new RuntimeException("User not found"));
+
+        // Act & Assert - Should not throw exception
+        assertDoesNotThrow(() -> notificationService.onResponseAddedSync(report, response));
+        verify(notificationRepository, times(1)).save(any(Notification.class)); // Only admin notification
+    }
+
+    @Test
+    @DisplayName("Memberi notifikasi sinkron laporan baru ke admin untuk laporan umum")
+    public void testNotifyNewReportSync_GeneralReport() {
+        // Arrange
+        Report report = new Report(1L, "user@example.com", ReportCategory.PAYMENT, "Issue");
+        report.setId(UUID.randomUUID());
+
+        when(userService.getAdminIds()).thenReturn(List.of(2L));
+        when(userService.getUserEmail(2L)).thenReturn("admin@example.com");
+
+        // Act
+        notificationService.notifyNewReportSync(report);
+
+        // Assert
+        ArgumentCaptor<Notification> captor = ArgumentCaptor.forClass(Notification.class);
+        verify(notificationRepository).save(captor.capture());
+
+        Notification notification = captor.getValue();
+        assertEquals("New Report Submitted", notification.getTitle());
+        assertEquals("NEW_REPORT", notification.getType());
+        assertTrue(notification.getMessage().contains("general report"));
+    }
+
+    @Test
+    @DisplayName("Memberi notifikasi sinkron laporan baru ke admin dan organizer untuk laporan event")
+    public void testNotifyNewReportSync_EventReport() {
+        // Arrange
+        Report report = new Report(1L, "user@example.com", 10L, "Event Title", ReportCategory.EVENT, "Issue");
+        report.setId(UUID.randomUUID());
+
+        when(userService.getAdminIds()).thenReturn(List.of(2L));
+        when(userService.getUserEmail(2L)).thenReturn("admin@example.com");
+        when(userService.getOrganizerIds(10L)).thenReturn(List.of(3L));
+        when(userService.getUserEmail(3L)).thenReturn("organizer@example.com");
+
+        // Act
+        notificationService.notifyNewReportSync(report);
+
+        // Assert
+        verify(notificationRepository, times(2)).save(any(Notification.class)); // Admin + Organizer
+        ArgumentCaptor<Notification> captor = ArgumentCaptor.forClass(Notification.class);
+        verify(notificationRepository, atLeast(1)).save(captor.capture());
+
+        List<Notification> notifications = captor.getAllValues();
+        assertTrue(notifications.stream().anyMatch(n -> n.getMessage().contains("Event Title")));
+    }
+
+    @Test
+    @DisplayName("Memberi notifikasi sinkron laporan event dengan fallback nama ketika eventTitle null")
+    public void testNotifyNewReportSync_EventReportWithoutTitle() {
+        // Arrange
+        Report report = new Report(1L, "user@example.com", 10L, null, ReportCategory.EVENT, "Issue");
+        report.setId(UUID.randomUUID());
+
+        when(userService.getAdminIds()).thenReturn(List.of(2L));
+        when(userService.getUserEmail(2L)).thenReturn("admin@example.com");
+        when(userService.getOrganizerIds(10L)).thenReturn(List.of(3L));
+        when(userService.getUserEmail(3L)).thenReturn("organizer@example.com");
+
+        // Act
+        notificationService.notifyNewReportSync(report);
+
+        // Assert
+        ArgumentCaptor<Notification> captor = ArgumentCaptor.forClass(Notification.class);
+        verify(notificationRepository, atLeast(1)).save(captor.capture());
+
+        List<Notification> notifications = captor.getAllValues();
+        assertTrue(notifications.stream().anyMatch(n -> n.getMessage().contains("Event #10")));
+    }
+
+    @Test
+    @DisplayName("Tidak memanggil organizer sinkron ketika eventId null")
+    public void testNotifyNewReportSync_GeneralReportNullEventId() {
+        // Arrange
+        Report report = new Report(1L, "user@example.com", ReportCategory.PAYMENT, "Issue");
+        report.setId(UUID.randomUUID());
+
+        when(userService.getAdminIds()).thenReturn(List.of(2L));
+        when(userService.getUserEmail(2L)).thenReturn("admin@example.com");
+
+        // Act
+        notificationService.notifyNewReportSync(report);
+
+        // Assert
+        verify(notificationRepository, times(1)).save(any(Notification.class)); // Only admin
+        verify(userService, never()).getOrganizerIds(any()); // Should not be called
+    }
+
+    @Test
+    @DisplayName("Menangani exception sinkron ketika memberi notifikasi ke organizer tentang laporan baru")
+    public void testNotifyNewReportSync_ExceptionHandling() {
+        // Arrange
+        Report report = new Report(1L, "user@example.com", 10L, "Event", ReportCategory.EVENT, "Issue");
+        report.setId(UUID.randomUUID());
+
+        when(userService.getAdminIds()).thenReturn(List.of(2L));
+        when(userService.getUserEmail(2L)).thenReturn("admin@example.com");
+        when(userService.getOrganizerIds(10L)).thenReturn(List.of(3L));
+        when(userService.getUserEmail(3L)).thenThrow(new RuntimeException("Error"));
+
+        // Act & Assert - Should not throw exception
+        assertDoesNotThrow(() -> notificationService.notifyNewReportSync(report));
+        verify(notificationRepository, times(1)).save(any(Notification.class)); // Only admin
+    }
+
+    // EXISTING SYNCHRONOUS READ OPERATIONS - These remain unchanged
+    @Test
+    @DisplayName("Mendapatkan notifikasi pengguna berdasarkan ID")
     public void testGetUserNotifications() {
         // Arrange
         Long userId = 1L;
-        Notification notification1 = new Notification(userId, "user@example.com", "ADMIN", "Title 1", "Message 1", "TYPE_1", UUID.randomUUID());
-        Notification notification2 = new Notification(userId, "user@example.com", "SYSTEM", "Title 2", "Message 2", "TYPE_2", UUID.randomUUID());
-
-        List<Notification> notifications = Arrays.asList(notification1, notification2);
+        List<Notification> notifications = List.of(
+                new Notification(userId, "user@example.com", "ADMIN", "Title", "Message", "TYPE", UUID.randomUUID())
+        );
         when(notificationRepository.findByRecipientIdOrderByCreatedAtDesc(userId)).thenReturn(notifications);
 
         // Act
         List<Notification> result = notificationService.getUserNotifications(userId);
 
         // Assert
-        assertEquals(2, result.size());
         assertEquals(notifications, result);
         verify(notificationRepository).findByRecipientIdOrderByCreatedAtDesc(userId);
     }
 
     @Test
-    @DisplayName("Mendapatkan daftar notifikasi pengguna berdasarkan email")
+    @DisplayName("Mendapatkan notifikasi pengguna berdasarkan email")
     public void testGetUserNotificationsByEmail() {
         // Arrange
         String email = "user@example.com";
-        Notification notification1 = new Notification(1L, email, "ADMIN", "Title 1", "Message 1", "TYPE_1", UUID.randomUUID());
-        Notification notification2 = new Notification(1L, email, "SYSTEM", "Title 2", "Message 2", "TYPE_2", UUID.randomUUID());
-
-        List<Notification> notifications = Arrays.asList(notification1, notification2);
+        List<Notification> notifications = List.of(
+                new Notification(1L, email, "ADMIN", "Title", "Message", "TYPE", UUID.randomUUID())
+        );
         when(notificationRepository.findByRecipientEmailOrderByCreatedAtDesc(email)).thenReturn(notifications);
 
         // Act
         List<Notification> result = notificationService.getUserNotificationsByEmail(email);
 
         // Assert
-        assertEquals(2, result.size());
         assertEquals(notifications, result);
         verify(notificationRepository).findByRecipientEmailOrderByCreatedAtDesc(email);
     }
 
     @Test
-    @DisplayName("Mendapatkan daftar notifikasi yang belum dibaca berdasarkan ID pengguna")
+    @DisplayName("Mendapatkan notifikasi belum dibaca pengguna berdasarkan ID")
     public void testGetUnreadUserNotifications() {
         // Arrange
         Long userId = 1L;
-        Notification notification1 = new Notification(userId, "user@example.com", "ADMIN", "Title 1", "Message 1", "TYPE_1", UUID.randomUUID());
-        notification1.setRead(false);
-
-        List<Notification> notifications = List.of(notification1);
+        List<Notification> notifications = List.of(
+                new Notification(userId, "user@example.com", "ADMIN", "Title", "Message", "TYPE", UUID.randomUUID())
+        );
         when(notificationRepository.findByRecipientIdAndReadOrderByCreatedAtDesc(userId, false)).thenReturn(notifications);
 
         // Act
         List<Notification> result = notificationService.getUnreadUserNotifications(userId);
 
         // Assert
-        assertEquals(1, result.size());
         assertEquals(notifications, result);
         verify(notificationRepository).findByRecipientIdAndReadOrderByCreatedAtDesc(userId, false);
     }
 
     @Test
-    @DisplayName("Mendapatkan daftar notifikasi yang belum dibaca berdasarkan email pengguna")
+    @DisplayName("Mendapatkan notifikasi belum dibaca pengguna berdasarkan email")
     public void testGetUnreadUserNotificationsByEmail() {
         // Arrange
         String email = "user@example.com";
-        Notification notification1 = new Notification(1L, email, "ADMIN", "Title 1", "Message 1", "TYPE_1", UUID.randomUUID());
-        notification1.setRead(false);
-
-        List<Notification> notifications = List.of(notification1);
+        List<Notification> notifications = List.of(
+                new Notification(1L, email, "ADMIN", "Title", "Message", "TYPE", UUID.randomUUID())
+        );
         when(notificationRepository.findByRecipientEmailAndReadOrderByCreatedAtDesc(email, false)).thenReturn(notifications);
 
         // Act
         List<Notification> result = notificationService.getUnreadUserNotificationsByEmail(email);
 
         // Assert
-        assertEquals(1, result.size());
         assertEquals(notifications, result);
         verify(notificationRepository).findByRecipientEmailAndReadOrderByCreatedAtDesc(email, false);
     }
 
     @Test
-    @DisplayName("Menghitung jumlah notifikasi yang belum dibaca berdasarkan ID pengguna")
+    @DisplayName("Menghitung jumlah notifikasi belum dibaca berdasarkan ID pengguna")
     public void testCountUnreadNotifications() {
         // Arrange
         Long userId = 1L;
-        long expectedCount = 3;
-        when(notificationRepository.countByRecipientIdAndRead(userId, false)).thenReturn(expectedCount);
+        when(notificationRepository.countByRecipientIdAndRead(userId, false)).thenReturn(3L);
 
         // Act
         long result = notificationService.countUnreadNotifications(userId);
 
         // Assert
-        assertEquals(expectedCount, result);
+        assertEquals(3L, result);
         verify(notificationRepository).countByRecipientIdAndRead(userId, false);
     }
 
     @Test
-    @DisplayName("Menghitung jumlah notifikasi yang belum dibaca berdasarkan email pengguna")
+    @DisplayName("Menghitung jumlah notifikasi belum dibaca berdasarkan email pengguna")
     public void testCountUnreadNotificationsByEmail() {
         // Arrange
         String email = "user@example.com";
-        long expectedCount = 3;
-        when(notificationRepository.countByRecipientEmailAndRead(email, false)).thenReturn(expectedCount);
+        when(notificationRepository.countByRecipientEmailAndRead(email, false)).thenReturn(5L);
 
         // Act
         long result = notificationService.countUnreadNotificationsByEmail(email);
 
         // Assert
-        assertEquals(expectedCount, result);
+        assertEquals(5L, result);
         verify(notificationRepository).countByRecipientEmailAndRead(email, false);
     }
 
     @Test
-    @DisplayName("Menandai notifikasi sebagai telah dibaca")
+    @DisplayName("Menandai notifikasi sebagai sudah dibaca")
     public void testMarkNotificationAsRead() {
         // Arrange
         UUID notificationId = UUID.randomUUID();
-        Long userId = 1L;
-        Notification notification = new Notification(userId, "user@example.com", "ADMIN", "Title", "Message", "TYPE_1", UUID.randomUUID());
+        Notification notification = new Notification(1L, "user@example.com", "ADMIN", "Title", "Message", "TYPE", UUID.randomUUID());
         notification.setId(notificationId);
         notification.setRead(false);
 
-        when(notificationRepository.findById(notificationId)).thenReturn(java.util.Optional.of(notification));
+        when(notificationRepository.findById(notificationId)).thenReturn(Optional.of(notification));
         when(notificationRepository.save(notification)).thenReturn(notification);
 
         // Act
-        Notification updatedNotification = notificationService.markNotificationAsRead(notificationId);
+        Notification result = notificationService.markNotificationAsRead(notificationId);
 
         // Assert
-        assertTrue(updatedNotification.isRead(), "Notifikasi seharusnya ditandai sebagai telah dibaca");
-        verify(notificationRepository).save(updatedNotification);
+        assertTrue(result.isRead());
+        verify(notificationRepository).save(notification);
     }
 
     @Test
-    @DisplayName("Menandai semua notifikasi sebagai telah dibaca berdasarkan ID pengguna")
+    @DisplayName("Melempar exception ketika menandai notifikasi tidak ditemukan sebagai sudah dibaca")
+    public void testMarkNotificationAsRead_NotFound() {
+        // Arrange
+        UUID notificationId = UUID.randomUUID();
+        when(notificationRepository.findById(notificationId)).thenReturn(Optional.empty());
+
+        // Act & Assert
+        EntityNotFoundException exception = assertThrows(
+                EntityNotFoundException.class,
+                () -> notificationService.markNotificationAsRead(notificationId)
+        );
+
+        assertEquals("Notification not found", exception.getMessage());
+        verify(notificationRepository, never()).save(any());
+    }
+
+    @Test
+    @DisplayName("Menandai semua notifikasi sebagai sudah dibaca berdasarkan ID pengguna")
     public void testMarkAllNotificationsAsRead() {
         // Arrange
         Long userId = 1L;
         Notification notification1 = new Notification(userId, "user@example.com", "ADMIN", "Title 1", "Message 1", "TYPE_1", UUID.randomUUID());
-        notification1.setRead(false);
-
         Notification notification2 = new Notification(userId, "user@example.com", "SYSTEM", "Title 2", "Message 2", "TYPE_2", UUID.randomUUID());
+        notification1.setRead(false);
         notification2.setRead(false);
 
-        List<Notification> unreadNotifications = Arrays.asList(notification1, notification2);
-        when(notificationRepository.findByRecipientIdAndReadOrderByCreatedAtDesc(userId, false)).thenReturn(unreadNotifications);
+        when(notificationRepository.findByRecipientIdAndReadOrderByCreatedAtDesc(userId, false))
+                .thenReturn(Arrays.asList(notification1, notification2));
 
         // Act
         notificationService.markAllNotificationsAsRead(userId);
 
         // Assert
-        verify(notificationRepository, times(2)).save(any(Notification.class));
         assertTrue(notification1.isRead());
         assertTrue(notification2.isRead());
+        verify(notificationRepository, times(2)).save(any(Notification.class));
     }
 
     @Test
-    @DisplayName("Menandai semua notifikasi sebagai telah dibaca berdasarkan email pengguna")
+    @DisplayName("Menandai semua notifikasi sebagai sudah dibaca berdasarkan email pengguna")
     public void testMarkAllNotificationsAsReadByEmail() {
         // Arrange
         String email = "user@example.com";
-        Notification notification1 = new Notification(1L, email, "ADMIN", "Title 1", "Message 1", "TYPE_1", UUID.randomUUID());
-        notification1.setRead(false);
+        Notification notification = new Notification(1L, email, "ADMIN", "Title", "Message", "TYPE", UUID.randomUUID());
+        notification.setRead(false);
 
-        Notification notification2 = new Notification(2L, email, "SYSTEM", "Title 2", "Message 2", "TYPE_2", UUID.randomUUID());
-        notification2.setRead(false);
-
-        List<Notification> unreadNotifications = Arrays.asList(notification1, notification2);
-        when(notificationRepository.findByRecipientEmailAndReadOrderByCreatedAtDesc(email, false)).thenReturn(unreadNotifications);
+        when(notificationRepository.findByRecipientEmailAndReadOrderByCreatedAtDesc(email, false))
+                .thenReturn(List.of(notification));
 
         // Act
         notificationService.markAllNotificationsAsReadByEmail(email);
 
         // Assert
-        verify(notificationRepository, times(2)).save(any(Notification.class));
-        assertTrue(notification1.isRead());
-        assertTrue(notification2.isRead());
+        assertTrue(notification.isRead());
+        verify(notificationRepository).save(notification);
     }
 
     @Test
-    @DisplayName("Menangani error saat notifikasi yang akan ditandai tidak ditemukan")
-    public void testMarkNotificationAsRead_NotificationNotFound() {
+    @DisplayName("Menangani exception sinkron ketika memberi notifikasi ke admin tentang laporan baru")
+    public void testNotifyNewReportSync_AdminNotificationException() {
         // Arrange
-        UUID nonExistentId = UUID.randomUUID();
-        when(notificationRepository.findById(nonExistentId)).thenReturn(java.util.Optional.empty());
+        Report report = new Report(1L, "user@example.com", ReportCategory.PAYMENT, "Issue");
+        report.setId(UUID.randomUUID());
+
+        when(userService.getAdminIds()).thenReturn(Arrays.asList(2L, 3L));
+        when(userService.getUserEmail(2L)).thenThrow(new RuntimeException("Failed to get admin email"));
+        when(userService.getUserEmail(3L)).thenReturn("admin3@example.com");
 
         // Act & Assert
-        EntityNotFoundException exception = assertThrows(
-                EntityNotFoundException.class,
-                () -> notificationService.markNotificationAsRead(nonExistentId)
-        );
+        assertDoesNotThrow(() -> notificationService.notifyNewReportSync(report));
 
-        assertEquals("Notification not found", exception.getMessage());
-        verify(notificationRepository).findById(nonExistentId);
-        verify(notificationRepository, never()).save(any(Notification.class));
+        // Assert
+        verify(notificationRepository, times(1)).save(any(Notification.class));
     }
+
+    @Test
+    @DisplayName("Menangani exception sinkron ketika memberi notifikasi ke admin tentang respon attendee")
+    public void testOnResponseAddedSync_AdminNotificationException() {
+        // Arrange
+        Report report = new Report(1L, "user@example.com", ReportCategory.PAYMENT, "Issue");
+        report.setId(UUID.randomUUID());
+        ReportResponse response = new ReportResponse(1L, "user@example.com", "ATTENDEE", "Response", report);
+
+        when(userService.getAdminIds()).thenReturn(Arrays.asList(2L, 3L));
+        when(userService.getUserEmail(2L)).thenThrow(new RuntimeException("Failed to get admin email"));
+        when(userService.getUserEmail(3L)).thenReturn("admin3@example.com");
+
+        // Act & Assert
+        assertDoesNotThrow(() -> notificationService.onResponseAddedSync(report, response));
+
+        // Assert
+        verify(notificationRepository, times(1)).save(any(Notification.class));
+    }
+
 }
